[package]
name = "aa_wasmtime_c"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
#aa_wasmtime = { git = "https://github.com/bgaster/aa_wasmtime", rev = "cb0b9355131e6a7e57648cda52615e9ff22fe687"}
aa_wasmtime = { path = "../aa_wasmtime" }
libc = "0.2"
curl = { version = "0.4.33"}
anyhow = { version = "1.0.32" }
thiserror = { version = "1.0.20" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57" }
serde_repr = { version = "0.1.6" }
crossbeam-channel = { version = "0.4.4" }

[build-dependencies]
cbindgen = "0.15.0"